--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-action": "^1.2.2",
+    "redux-saga": "^1.2.0",
     "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.4"
   },
